// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It should render the EllipsisLoader should render the EllipsisLoaderComponent 1`] = `
<img
  alt="loader"
  className="ellipsis"
  src={Object {}}
/>
`;

exports[`It should render the PreloaderComponent should render the PreloaderComponent 1`] = `
<div
  className="progress"
>
  <div
    className="indeterminate"
  />
</div>
`;

exports[`It should render the RingLoader should render the RingLoaderComponent 1`] = `
<div
  className="lds-ring"
>
  <div />
  <div />
  <div />
  <div />
  <div />
</div>
`;
